--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,14 @@ body::-webkit-scrollbar-thumb {
   margin-bottom: 32px;
 }
 
+.comment-quote {
+  background-color: gray;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  border-left: 8px solid var(--green);
+}
+
 .comment-text {
   font-size: 32px;
 }
@@ -131,6 +139,46 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
 }
 
+.comment-editor {
+  position: relative;
+  width: 100%;
+}
+
+.quote {
+  position: absolute;
+  top: 15px;
+  left: 75px;
+  width: calc(100% - 44px);
+  min-height: 20px;
+  color: black;
+  background-color: silver;
+  border-left: 8px solid var(--green);
+  border-radius: 15px;
+  margin-top: 12px;
+  padding: 15px;
+  box-sizing: border-box;
+  opacity: 0;
+
+  &.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+  }
+}
+
+.cancel-quote-button {
+  width: 27px;
+  font-size: 22px;
+  background-color: var(--green);
+  border: none;
+  border-radius: 15px;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
 .add-form-name,
 .add-form-text {
   font-size: 16px;
@@ -147,6 +195,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .add-form-text {
+  width: 100%;
   margin-top: 12px;
   padding: 22px;
   resize: none;
