--- a/styles.css
+++ b/styles.css
@@ -310,8 +310,7 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-.add-form-name,
-.add-form-text {
+.input {
   font-size: 16px;
   font-family: "Helvetica", sans-serif;
   border-radius: 8px;
@@ -320,40 +319,38 @@ body::-webkit-scrollbar-thumb {
   outline: none;
 }
 
-.add-form-name {
+.input--short {
   width: 300px;
   padding: 11px 22px;
 }
 
-.add-form-text {
+.input--big {
   width: 100%;
   margin-top: 12px;
   padding: 22px;
   resize: none;
 }
 
-.add-form-text--alone {
+.input--alone {
   transition: padding-top 0.7s ease-in-out;
   padding-top: 22px;
 }
 
-.add-form-text--inclusive {
+.input--inclusive {
   transition: padding-top 0.18s ease-in-out;
   padding-top: var(--padding-for-comment);
 }
 
-.add-form-name:active,
-.add-form-text:active,
-.add-form-name:focus,
-.add-form-text:focus {
+.input:active,
+.input:focus {
   border: 3px solid var(--active);
 }
 
-.add-form--error {
+.input--error {
   background-color: lightpink;
 }
 
-.add-form-row {
+.row {
   margin-top: 24px;
 
   &.flex {
@@ -362,21 +359,21 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-.add-form-button {
+.button {
   font-size: 22px;
   padding: 10px 20px;
   background-color: var(--active);
   border: none;
   border-radius: 18px;
   cursor: pointer;
-}
 
-.add-form-button:disabled {
-  background-color: var(--disabled);
-}
+  &:disabled {
+    background-color: var(--disabled);
+  }
 
-.add-form-button:hover {
-  opacity: 0.9;
+  &:hover {
+    opacity: 0.9;
+  }
 }
 
 .loader {
