--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,25 @@ body::-webkit-scrollbar-thumb {
   left: 19px;
 }
 
+.user-info {
+  position: absolute;
+  right: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+  .user-info_name {
+    color: var(--pear);
+  }
+}
+
+.little-button {
+  color: white;
+  background: var(--others);
+  border: 3px solid var(--others);
+  border-radius: 3px;
+}
+
 .comments,
 .comment {
   margin: 0;
